--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cronos Club is an organization that aims to make the Cronos Chain more secure and user-friendly, by enabling reliable NFT trading using smart contract, allowing you to earn profits for each NFT mint through its unique launchpad system, and providing a single page for checking news from NFT projects on the Cronos Chain."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
